<resources>
    <string name="app_name">Sudoku</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="settings_game">Setting</string>
    <string name="about_game">About</string>
    <string name="exit_game">Exit</string>
    <string name="about_content_rules">Sudoku is played on a grid of 9 x 9 spaces. Within the rows and columns are 9 “squares” (made up of 3 x 3 spaces). Each row, column and square (9 spaces each) needs to be filled out with the numbers 1-9, without repeating any numbers within the row, column or square</string>
    <string name="about_content_explain">In the blue square, space with green cycle should be put 1 based on rules of Sudoku game. </string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="no_move">No Values</string>
    <string name="changes">"Changes: "</string>
    <string name="time">"Time: "</string>
    <string name="dialogTitle">Resume Game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ingame_resume">Resume</string>
    <string name="ingame_restart">Restart</string>
    <string name="ingame_exit">Main Menu</string>
    <string name="warning">Warning</string>
    <string name="warning_delete_old_game">That can delete your last play. Do you want to continue?</string>
    <string name="profile">Profile</string>
    <string name="play">Play</string>
    <string name="dismiss">Dismiss</string>
    <string name="ad_unit_id">ca-app-pub-4576847792571626/5498866799</string>
    <string name="ad_unit_id_interstitial">ca-app-pub-4576847792571626/8452333192</string>
    <string name="ad_unit_id_rewarded_video">ca-app-pub-4576847792571626/1306063199</string>
    <string name="empty_string"></string>
    <string name="example_string">example string</string>
    <string name="get_more">Get More</string>
    <string name="loading_string">Loading</string>

</resources>
