<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="Hello World!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btNewGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btClick"
                android:text="@string/new_game"/>
            <Button
                android:id="@+id/btContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btClick"
                android:text="@string/continue_game"/>
            <Button
                android:id="@+id/btSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btClick"
                android:text="@string/settings_game"/>
            <Button
                android:id="@+id/btAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btClick"
                android:text="@string/about_game"/>
            <Button
                android:id="@+id/btExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btClick"
                android:text="@string/exit_game"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
